# c-conveniences

./: .gitignore  CMakeLists.txt  README.md  build.sh
NBMAlgorithms/: CMakeLists.txt  bubblesort.cpp  bubblesort.h  mergesort.cpp  mergesort.h  quicksort.cpp  quicksort.h
NBMDemos/: CMakeLists.txt  algorithm-bubblesort.cpp  algorithm-quicksort.cpp  image-convolution.cpp  structure-list.cpp  structure-stack.cpp
NBMImageConveniences/: CMakeLists.txt  image.cpp  image.h  processing.cpp  processing.h
NBMImageConveniences/CxImage/CxImage/: tif_xfile.cpp  ximage.h  ximapng.h
NBMImageConveniences/CxImage/jasper/base/: jas_stream.c
NBMImageConveniences/CxImage/jasper/jpc/: jpc_tsfb.c
NBMImageConveniences/CxImage/jpeg/: cjpeg  config.status  jpegtran  usage.txt  wrjpgcom
NBMImageConveniences/CxImage/jpeg/.deps/: cdjpeg.Po  djpeg.Po  jcapimin.Plo  jcarith.Plo  jccolor.Plo  jcdctmgr.Plo  jcinit.Plo  jcmaster.Plo  jctrans.Plo  jdapimin.Plo  jdatasrc.Plo  jdcoefct.Plo  jddctmgr.Plo  jdhuff.Plo  jdinput.Plo  jdmainct.Plo  jdmarker.Plo  jdmaster.Plo  jdpostct.Plo  jdsample.Plo  jerror.Plo  jfdctint.Plo  jidctflt.Plo  jmemnobs.Plo  jquant1.Plo  jutils.Plo  rdbmp.Po  rdgif.Po  rdjpgcom.Po  rdppm.Po  rdrle.Po  transupp.Po  wrjpgcom.Po
NBMImageConveniences/CxImage/png/: pngpriv.h
NBMImageConveniences/CxImage/tiff/: tif_config.h  tiffiop.h
NBMImageConveniences/CxImage/zlib/: gzguts.h  gzlib.c
NBMStructures/: CMakeLists.txt  binary_tree.h  stack.cpp
Structures/: binary_tree.cpp  bubblesort.c  bubblesort.h  list.c  list.cpp  list.h  main.c  mergesort.c  mergesort.h  quicksort.c  quicksort.h  stack.h
Structures.xcodeproj/: project.pbxproj
Structures.xcodeproj/project.xcworkspace/xcuserdata/mateusnbm.xcuserdatad/: UserInterfaceState.xcuserstate
Structures.xcodeproj/xcuserdata/mateusnbm.xcuserdatad/xcschemes/: Structures.xcscheme  xcschememanagement.plist
algorithms/: CMakeLists.txt  mergesort.h  quicksort.cpp  quicksort.h
demos/: CMakeLists.txt  algorithm-mergesort.cpp
imgconveniences/: CMakeLists.txt
imgconveniences/cximage/: Android.mk
imgconveniences/cximage/CxImage/: ximacfg.h  ximadef.h  ximadsp.cpp  ximainfo.cpp  ximajpg.cpp  ximapng.cpp  xiofile.h
imgconveniences/cximage/jpeg/: Makefile  djpeg  libtool  rdjpgcom
imgconveniences/cximage/jpeg/.deps/: cjpeg.Po  jaricom.Plo  jcapistd.Plo  jccoefct.Plo  jchuff.Plo  jcmainct.Plo  jcmarker.Plo  jcomapi.Plo  jcparam.Plo  jcprepct.Plo  jcsample.Plo  jdapistd.Plo  jdarith.Plo  jdatadst.Plo  jdcolor.Plo  jdmerge.Plo  jdtrans.Plo  jfdctflt.Plo  jfdctfst.Plo  jidctfst.Plo  jidctint.Plo  jmemmgr.Plo  jpegtran.Po  jquant2.Plo  rdcolmap.Po  rdswitch.Po  rdtarga.Po  wrbmp.Po  wrgif.Po  wrppm.Po  wrrle.Po  wrtarga.Po
imgconveniences/cximage/png/: configure
imgconveniences/cximage/tiff/: tif_dirinfo.c  tif_dirread.c  tif_ojpeg.c
structures/: CMakeLists.txt  list.h
